k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: default
  labels:
    k8s-app: frontend
  annotations:
    deployment.kubernetes.io/revision: '3'
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: frontend
  template:
    metadata:
      name: frontend
      labels:
        k8s-app: frontend
    spec:
      containers:
        - name: node-app
          image: registry.digitalocean.com/bmemes/bm-front:latest
          imagePullPolicy: Always
