k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: default
spec:
  type: ClusterIP
  selector:
    k8s-app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
